chore: fix bug of scroll section jump glitch

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,10 @@
 Global Styles
 *****************************************/
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   max-width: 1200px;
   margin-inline: auto;
